# RustySpectrum

./: .gitignore  Cargo.toml  README.md
src/: colors.rs  fft.rs  files.rs  main.rs
src/app/: colors.rs  display.rs  emath.rs  file_format.rs  mod.rs
