[package]
name = "spectrum_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
fern = { version = "0.6.2", features = ["colored"] }
image = "0.24.6"
log = "0.4.17"
num-traits = "0.2.15"
rhai = "1.13.0"
rustfft = "6.1.0"
serde = { version = "1.0.160", features = ["derive"] }
